--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   video_player: "^0.7.2"
   cached_network_image: "^0.5.0+1"
 
-  flutter_markdown: ^0.2.0
+  flutter_markdown:
+    git: https://github.com/flutter/flutter_markdown.git
   html2md: ^0.2.1
 
 
