--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter_custom_tabs: "^0.4.0"
   html: ^0.13.3+3
   video_player: "^0.7.2"
-  cached_network_image: "^0.5.0+1"
+  cached_network_image: "^0.7.0"
 
   flutter_markdown:
     git: https://github.com/flutter/flutter_markdown.git
