--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
 
   flutter_markdown:
     git: https://github.com/reemii-cn/flutter_markdown.git
-  html2md: ^0.2.1
+  # html2md: ^0.2.1
 
 environment:
   sdk: ">=2.0.0-dev.28.0 <3.0.0"
