--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   html: ^0.13.3+3
   # video_player: "^0.7.2"
   # cached_network_image: "^1.1.0"
-  flutter_inappbrowser: 0.6.0
+  # flutter_inappbrowser: 0.6.0
 
   flutter_markdown:
     git: https://github.com/reemii-cn/flutter_markdown.git
