--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter_custom_tabs: "^0.6.0"
   html: ^0.13.3+3
   video_player: "^0.7.2"
-  cached_network_image: 1.1.3
+  cached_network_image: 2.2.0+1
   flutter_inappbrowser: ^1.2.1
 
   flutter_markdown:
